--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,17 +28,27 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
+  smooth_page_indicator: ^1.1.0
+carousel_slider: ^4.2.1
+smooth_page_indicator: ^1.1.0
+http: ^1.2.1
+cached_network_image: ^3.3.1
+font_awesome_flutter: ^10.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_test:
+  sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -51,7 +61,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+  flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -59,9 +69,22 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+assets:
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\business.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\entertainment.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\health.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\politics.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\sports.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\cricket.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\basket.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\tennis.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\golf.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\football.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\swim.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\race.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\cycle.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\gym.jpg
+  -C:\Users\Saloni\Documents\GitHub\top10_news\assets\images\sports1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
